2010-04-16  Doug Kwan  <dougkwan@google.com>

	* config/i386/i386.md (*jcc_bt<mode>): Fix build breakage by adding
	missing left parenthesis.
	
2010-04-16  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*bt<mode>): Macroize insn from *btsi and
	*btdi_rex64 using SWI48 mode iterator.
	(*jcc_bt<mode>): Ditto from *jcc_btsi and *jcc_btdi_rex64.
	(*jcc_bt<mode>_mask): Ditto from *jcc_btsi_mask and
	*jcc_btdi_mask_rex64.

2010-04-16  Anatoly Sokolov  <aesok@post.ru>

	* double-int.h (tree_to_double_int): Convert to macro.
	* double-int.c (tree_to_double_int): Remove.

2010-04-16  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43762
	* dwarf2out.c (add_bound_info): Always call loc_list_from_tree
	with want_address 2 and in case a single element list might be
	possible, call it again with want_address 0.

2010-04-12  Kaushik Phatak  <kaushik.phatak@kpitcummins.com>

	* config/h8300/h8300.h (OK_FOR_U): Support 'U' constraint for H8300SX.

	* config/h8300/h8300.md (movqi_h8sx, movhi_h8sx, movsi_h8sx, 
	cmphi_h8300hs_znvc, cmpsi, addhi3_h8sx) : Emit instructions in
	#xx:3 and #xx:4 mode.

	* config/h8300/h8300.md (inverted load with HImode dest): Add
	support for H8300SX.

	* config/h8300/predicate.md (bit_operand): Allow immediate values that
	satisfy 'U' constraint.

2010-04-16  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac: Check for elf_getshdrstrndx or elf_getshstrndx
	flavor.
	* configure: Regenerate.
	* config.in: Regenerate.
	* doc/install.texi (Prerequisites): Document that Solaris 2 libelf
	works.

2010-04-16  Richard Guenther  <rguenther@suse.de>

	* tree.h (struct tree_decl_minimal): Move pt_uid ...
	(struct tree_decl_common): ... here.
	(DECL_PT_UID): Adjust.
	(SET_DECL_PT_UID): Likewise.
	(DECL_PT_UID_SET_P): Likewise.

2010-04-16  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43572
	* tree-ssa-alias.h (call_may_clobber_ref_p): Declare.
	* tree-ssa-alias.c (call_may_clobber_ref_p): Export.